refactored postUpdateTag() in TagControllerTest but still fails